--- a/eco-backend/.env
+++ b/eco-backend/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/ecocycle
+MONGO_URI=mongodb+srv://minhajbanu456_db_user:xD1hH0ECT3ZlBVnl@cluster0.yx2vvxm.mongodb.net/ecoDB
 JWT_SECRET=itsmyfirstfullstackproject456!@#
